--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>Horiseon Information Page</title>
 </head>
-
 <body>
     <header>
         <div class="header">
@@ -57,7 +55,6 @@
                 </div>
             </article>
         </div>
-        
         <aside class="benefits">
             <div class="benefit-lead">
                 <h3>Lead Generation</h3>
@@ -82,15 +79,13 @@
             </div>
         </aside>
     </main>
-
     <footer>
         <div class="footer">
-            <h2>Made with ❤️️ by Horiseon</h2>
+            <h4>Made with ❤️️ by Horiseon</h4>
             <p>
                 &copy; 2019 Horiseon Social Solution Services, Inc.
             </p>
         </div>
     </footer>
 </body>
-
 </html>
