added informationl notes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Horiseon Information Page</title>
 </head>
 <body>
+    <!-- header with clickable links to each information block on the page -->
     <header>
         <div class="header">
             <h1>Hori<span class="seo">seo</span>n</h1>
@@ -24,9 +25,13 @@
             </div>
         </div>
     </header>
+    <!-- large image on the page -->
     <div class="hero"></div>
+    <!-- main information section -->
     <main>
+        <!-- encompasses the style of the article elements -->
         <div class="content">
+            <!-- each aricle element is separated as a block of information for each topic -->
             <article>
                 <div class="search-engine-optimization">
                     <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="search-engine-optimization"/>
@@ -55,6 +60,7 @@
                 </div>
             </article>
         </div>
+        <!-- info boxes on the right side of the page -->
         <aside class="benefits">
             <div class="benefit-lead">
                 <h3>Lead Generation</h3>
@@ -79,6 +85,7 @@
             </div>
         </aside>
     </main>
+    <!-- footer and copyright -->
     <footer>
         <div class="footer">
             <h4>Made with ❤️️ by Horiseon</h4>
